[gd_scene load_steps=3 format=3 uid="uid://bg8bn3te4uje0"]

[ext_resource type="Theme" uid="uid://da5416usdf100" path="res://Menu/Main/main.tres" id="1_ctf4u"]
[ext_resource type="Script" path="res://Menu/Main/main.gd" id="2_320lf"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ctf4u")
script = ExtResource("2_320lf")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -165.0
offset_top = -61.0
offset_right = 165.0
offset_bottom = 62.0
grow_horizontal = 2
grow_vertical = 2

[node name="ButtonsContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/ButtonsContainer"]
layout_mode = 2

[node name="StartGame" type="Button" parent="PanelContainer/ButtonsContainer/VBoxContainer"]
layout_mode = 2
text = "Start game"

[node name="Highscore" type="Button" parent="PanelContainer/ButtonsContainer/VBoxContainer"]
layout_mode = 2
text = "Highscore"

[node name="Credits" type="Button" parent="PanelContainer/ButtonsContainer/VBoxContainer"]
layout_mode = 2
text = "Credits"

[connection signal="pressed" from="PanelContainer/ButtonsContainer/VBoxContainer/StartGame" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="PanelContainer/ButtonsContainer/VBoxContainer/Highscore" to="." method="_on_highscore_pressed"]
[connection signal="pressed" from="PanelContainer/ButtonsContainer/VBoxContainer/Credits" to="." method="_on_credits_pressed"]
